第二次提交

--- a/index.html
+++ b/index.html
@@ -76,10 +76,13 @@
             </ul>
         </div>
     </div>
+    <script src="javascripts/sea.js" data-main="javascripts/player2"></script>  
+    <!-- <script src="javascripts/config.js"></script> -->
 
-
-    <script src="javascripts/jquery.min.js"></script>
-    <script src="javascripts/player2.js"></script>
-    <script src="javascripts/dataFormat.js"></script>
+    <!-- <script src="javascripts/jquery.min.js"></script> -->
+    <!-- 文件依赖 -->
+    <!-- <script src="javascripts/dataFormat.js"></script>
+    <script src="javascripts/player2.js"></script> -->
+    
 </body>
 </html>
